--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@tanstack/react-query": "^5.74.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swagger-ui-express": "^5.0.1",
     "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.3"
   },
