--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.10",
     "@tanstack/react-query": "^5.74.4",
@@ -18,10 +19,14 @@
     "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
+    "sonner": "^2.0.3",
     "swagger-ui-express": "^5.0.1",
     "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
