--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.10",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
